<resources>
    <string name="app_name">Certificates</string>
    <string name="show_label">银行从业资格考试</string>
    <string name="menu_law_label">银行业法律法规与综合能力</string>
    <string name="menu_manage_label">个人理财</string>
    <string name="menu_risk_label">风险管理</string>
    <string name="menu_credit_label">公司信贷</string>
    <string name="menu_loan_label">个人贷款</string>
    <string name="menu_bank_label">银行管理</string>
    <string name="btn_history_label">历年真题</string>
    <string name="btn_forecast_label">模拟试卷</string>
    <string name="btn_section_label">章节内容</string>
    <string name="btn_note_label">章节目录</string>
    <string name="btn_write_label">学习笔记</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_first_label">第一部分</string>
    <string name="btn_second_label">第二部分</string>
    <string name="btn_third_label">第三部分</string>
    <string name="btn_fourth_label">第四部分</string>
    <string name="btn_fifth_label">第五部分</string>
    <string name="first1_label">第一章经济基础知识 \n
【考试大纲】 熟悉宏观经济发展的目标、经济周期的主要特征、经济结构的构成及对商业银行的影响； \n
            了解我国行业分类的方法、行业分析基本内容； \n
            掌握区域发展分析的内容及分析重点。 \n
        第一节宏观经济分析 \n
        宏观经济分析是以整个国民经济活动作为考察对象，研究各个有关的总量及其变动，特别是研究国民生产总值和国民收入的变动及其与社会就业、经济周期波动、通货膨胀、经济 增长等之间的关系。因此，宏观经济分析又称总量分析或整体分析。 \n
        一、宏观经济发展目标  \n
        宏观经济发展的总体目标一般包括四个，即经济增长、充分就业、物价稳定和国际收支 平衡。这四大目标分别通过国内生产总值、失业率、通货膨胀率和国际收支等指标来衡量。 \n
        （一）经济增长与国内生产总值  \n
        经济增长是指一个特定时期内一国（或地区）经济产出和居民收入的增长。GDP是衡量一国（或地区）整体经济状况的主要指标，GDP增长率是反映一定时期经济发展水平变化程度的动态指标。国内生产总值有三种表现形态，即价值形态、收入形态和产品形态。在实际核算中，国内生产总值有三种计算方法，即生产法、收入法和支出法。 \n
        （二）充分就业与失业率  \n
        充分就业的宏观经济衡量指标是失业率。失业率是指劳动力人口中失业人数所占的百分比，劳动力人口是指年龄在16周岁以上具有劳动能力的人的全体。我国统计部门公布的失 业率为城镇登记失业率，即城镇登记失业人数占城镇从业人数与城镇登记失业人数之和的百分比。城镇登记失业人数是指拥有非农业户口，在一定的劳动年龄内有劳动能力，无业而要求就业，并在就业服务机构进行求职登记的人数。 \n
        （三）物价稳定与通货膨胀率 \n
        通货膨胀是指一般物价水平在一段时间内持续、普遍地上涨的经济现象。对通货膨胀的衡量可以通过对一般物价水平上涨幅度的衡量来进行。常用的指标有三种：消费者物价指数（CPI）、生产者物价指数（PPI）、国内生产总值物价平减指数（GDPDeflat。r）。消费者物价指数是指一组与居民生活有关的商品价格的变化幅度。生产者物价指数是指一组出厂产品批发价格的变化幅度。国内生产总值物价平减指数则是按当年不变价格计算的国内生产总值与按基年不变价格计算的国内生产总值的比率。在衡量通货膨胀时，消费者物价指数使用得最多、最普遍。 \n
        （四）国际收支与国际收支平衡  \n
        国际收支是指一国居民在一定时期内与非本国居民在政治、经济、军事、文化及其他往来中所产生的全部交易的系统记录。它记录的是一国居民与非居民之间的交易；是一定时期内对外交往的全部发生额，它既包括了价值对等转移，也包括价值的单方面转移；既包括引发外汇收支的经济交易，也包括不涉及外汇收支的易货及补偿贸易等国际经济交易。一国的国际收支状况是通过国际收支平衡表来反映的。国际收支平衡表是系统地记录一个国家一定时期内（通常为一年)全部国际收支项目及金额的统计报表。国际收支平衡表的账户可分为三大类： \n
        一是经常账户，是指针对本国对外经济交易经常发生的和实际资源在国际间的流动行为进行记录的账户。它包括货物、服务、收入和经常转移，是国际收支平衡表中最主要和最基本的账户。  \n
        二是资本与金融账户，是对资产所有权在国际间流动行为进行记录的账户，包括资本账户和金融账户两部分。资本账户包括资本转移和非生产、非金融资产的收买或放弃。金融账户是指引起一个经济体对外资产和负债所有权变更的交易。 \n
        三是错误与遗漏账户，是人为设立的抵销账户。 国际收支平衡是指国际收支差额处于一个相对合理的范围内，既无巨额的国际收支赤字，又 无巨额的国际收支盈余。 保持国际收支平衡是保证国民经济持续稳定增长和经济安全的重要条件。巨额的国际收支逆差可能导致外汇市场对本币信心的丧失、资本的大量外流、外汇储备的急剧下降、本币的大幅贬值，甚至导致严重的货币和金融危机。而长期、巨额的国际收支顺差，既使大量的 外汇储备闲置，造成资源浪费，又常常因为购买大量的外汇而增加本国货币投放，导致国内 通货膨胀压力增加。 \n
        二、经济周期 经济周期是指经济处于生产和再生产过程中周期性出现的经济扩张与经济紧缩交替更 迭、循环往复的一种现象。经济周期一般分为四个阶段：繁荣阶段、衰退阶段、萧条阶段和 复苏阶段。经济波动的周期性会在很大程度上决定和影响商业银行的经营状况。 在经济繁荣阶段，失业率下降，收入增加使消费支出增加，社会购买力上升，市场兴旺， 产品供不应求，价格上升；市场预期好转，企业投资意愿增强；生产发展迅速，企业的经营 规模不断扩大，投资数额显著增加，利润激增，这时，商业银行的资产规模和利润也处于最 高水平。 在经济衰退阶段和萧条阶段，失业人口增加，消费需求开始减少，商品滞销，生产缩减， 企业资金周转困难，从而造成商业银行的负债规模严重下降。企业破产倒闭使银行贷款坏账 增加，导致银行贷款收缩，信用投放能力锐减，经营利润也大幅度下降，甚至出现亏损。 在经济复苏阶段，公众对市场信心恢复，企业投资意愿增加，企业开始增加投资并进行 固定资产更新，生产经营活动趋于正常，利润增加，对借贷资金的需求也显著扩大，商业银 行的资产业务规模和利润也有明显扩大。因此，一般来说，如果经济处于繁荣时期，银行业 整体的经营状况就会比较好；如果经济处于严重的衰退与萧条之中，那么银行业整体上也难 以保持健康。 当出现经济的严重衰退或大幅度货币贬值时，往往容易引发金融危机。金融危机是指一 个或几个国家与地区的全部或大部分金融指标（如短期利率、货币资产、证券、房地产、商 业破产数和金融机构倒闭数）的急剧和超周期的恶化，其结果是金融市场不能有效地提供资 金向最佳投资机会转移的渠道，从而对整个经济造成严重破坏。 国际货币基金组织将金融危机分为四大类：（1）货币危机。当某种货币的汇率受到投 机性袭击时，该货币出现持续性贬值，迫使当局扩大外汇储备，大幅度提高利率。（2）银 行危机。银行不能如期偿付债务，或迫使政府出面，提供大规模援助，以避免违约现象的发 生，一家银行的危机发展到一定程度，可能波及其他银行，从而引起整个银行系统的危机。（3）外债危机。一国国内的支付系统严重混乱，不能按期支付所欠外债，不管是主权债还 是私人债等。（4）系统性金融危机。可以称为全面金融危机，是指主要的金融领域都出现 混乱，如货币危机、银行危机、外债危机同时或相继发生。随着经济全球化及金融创新的发 展，金融危机越来越多地表现为系统性金融危机。金融危机会给银行带来重大影响，常常会导致商业银行、投资银行、保险公司、证券公 司等金融机构的大规模倒闭，使银行稳定发展受到严重打击。金融危机一旦引发经济基本面 的极端恶化，大量企业倒闭，社会经济陷入极端萧条中，就会发展为经济危机。 \n
三、经济结构  \n
        经济结构是指从不同角度考察的国民经济构成，一般包括产业结构、地区结构、城乡结 构、产品结构、所有制结构、分配结构、技术结构、消费投资结构等。 经济结构对商业银行既有直接影响，也有间接影响。从直接的角度来看，经济结构会直接影响社会经济主体对商业银行服务的需求，从而在一定程度上决定商业银行的经营特征。 从间接的角度来看，经济结构会通过影响一国国民经济的增长速度、增长质量和可持续性来 影响商业银行。这里主要介绍我国产业结构和消费投资结构中所存在的主要问题及其对商业 银行的影响。 \n
        （一）产业结构  \n
        国民经济可分为第一产业、第二产业和第三产业。国家统计局 2018 年 3 月 27 日发布了《关于修订〈三次产业划分规定（2012）〉的通知》，根据《国民经济行业分类》（GB/T4754 —2017）,对三次产业划分中的行业类别进行了调整。调整后的三次产业划分为： 第一产业是指农、林、牧、渔业； 第二产业是指采矿业，制造业，电力、热力、燃气及水生产和供应业，建筑业； 第三产业即服务业，是指除第一产业、第二产业以外的其他行业，具体包括：农、林、 牧、渔专业及辅助性活动，开采专业及辅助性活动，批发和零售业，交通运输、仓储和邮政 业，住宿和餐饮业，信息传输、软件和信息技术服务业，金融业，房地产业，租赁和商务服 务业，科学研究和技术服务业，水利、环境和公共设施管理业，居民服务、修理和其他服务业，教育，卫生和社会工作，文化、体育和娱乐业，公共管理、社会保障和社会组织，国际 组织。 \n
        （二）消费投资结构 \n
        从支出角度来看，GDP 由消费、投资和净出口三大部分构成。其中，消费包括私人消费 和政府消费两部分；投资也称为资本形成，包括固定资本形成（其中含房地产和非房地产投 资）和存货增加两部分；净出口是出口额减去进口额形成的差额。 四、经济全球化 经济全球化是指商品、服务、生产要素与信息跨国界流动的规模与形式不断增加，通过 国际分工，在世界市场范围内提高资源配置的效率，从而使各国间经济的相互依赖程度日益 加深的趋势。经济全球化的主要表现是：生产活动全球化，生产要素在全球范围内配置；金融国际化 进程加快，各国的金融日益融合在一起；投资活动遍及全球并成为经济发展和增长的新支点； 跨国公司的作用进一步加强。 经济全球化和金融全球化相互促进，推动了金融市场国际化的快速发展。金融管制逐步 放松，国内外金融市场之间的联动更加紧密，资本在全球各国、各地区的流动更加自由。 \n
第二节行业经济发展分析  \n
        行业是指从事相同性质的经济活动的所有单位的集合。行业分析主要是对行业发展状况 和发展水平的分析。通过行业分析，了解影响行业发展的各种因素，预测各行业的发展趋势， 可以为宏观经济决策提供可靠的依据。 \n
        一、我国的行业分类  \n
        我国采用经济活动的同质性原则划分国民行业。根据我国 2017 年公布的《国民经济行 业分类》(GB/T4754—2017)，将我国行业分为 20 个门类、97 个大类、473 个中类、1381 个 小类。新《国民经济行业分类》将我国行业分为如下20 个门类：农、林、牧、渔业；采矿 业；制造业；电力、热力、燃气及水生产和供应业；建筑业；批发和零售业；交通运输、仓储和邮政业；住宿和餐饮业；信息传输、软件和信息技术服务业；金融业；房地产业；租赁和商务服务业；科学研究和技术服务业；水利、环境和公共设施管理业；居民服务、修理和 其他服务业；教育；卫生和社会工作；文化、体育和娱乐业；公共管理、社会保障和社会组织；国际组织。 其中金融业门类包括货币金融服务、资本市场服务、保险业、其他金融业等 4 个大类。 货币金融服务包括中央银行服务、货币银行服务、非货币银行服务、银行理财服务、银行监 管服务等 5 个中类。资本市场服务包括证券市场服务、公开募集证券投资基金、非公开募集 证券投资基金、期货市场服务、证券期货监管服务、资本投资服务、其他资本市场服务等 7 个中类。保险类包括人身保险、财产保险、再保险、商业养老金、保险中介服务、保险资产 管理、保险监管服务、其他保险活动等 8 个中类。其他金融类包括金融信托与管理服务、控 股公司服务、非金融机构支付服务、金融信息服务、金融资产管理公司、其他未列明金融业 等 6 个中类。 \n
        二、行业分析基本内容  \n
        （一）行业的市场结构特征分析  \n
        根据行业的市场结构可以把行业划分为：完全竞争的行业、垄断竞争的行业、寡头垄断 的行业、完全垄断的行业四个市场结构类型。  \n
        1.完全竞争的行业，是指由许多企业生产同质产品的市场情形，是竞争充分而不受任何阻碍 和干扰的一种市场结构。 其特点是：生产者众多，各种生产资料可以完全流动；产品无论是有形或无形的，都是 同质的、无差别的；企业永远是价格的接受者而不是价格的制定者；企业的盈利基本上由市 场对产品的需求来决定；市场信息通畅，生产者和消费者对市场情况非常了解，并且可以自 由进入和退出这个市场。 \n
        2.垄断竞争的行业，是指一个市场中许多生产者生产同种但不同质产品的市场情形。在垄断 竞争的市场上，每个厂商都在市场上具有一定的垄断能力，但它们之间又存在着激烈的竞争。 其特点是：生产者众多，各种生产资料可以流动；生产的产品同种但不同质，即产品之间存 在着差异；由于产品差异性的存在，生产者可以树立自己产品的信誉，从而对自己经营的产 品的价格有一定的控制力。在现实经济生活中，制成品市场如纺织、食品零售等行业都属于 这种类型。 \n
        3.寡头垄断的行业，是指相对少量的生产者在某种产品的生产中占据很大市场份额的情形。 生产者产量非常大，因此对市场的价格和交易具有一定的垄断能力。只有少量的生产者生产 同一种产品，市场集中度高；每个企业的产量在全行业中占有的份额都比较大，进出壁垒比 较高。 \n
        4.完全垄断的行业，是指独家企业生产某种特质产品从而整个行业的市场完全处于一家企业 所控制之下的情形。其主要特点是：市场完全处于一家企业的控制中，产品被独占，产品又缺乏合适的替代 品，所以垄断企业对自己的产品价格有很强的控制力，能够获得最大利润。  \n
        （二）经济周期与行业分析  \n
        各行业发生变动时，通常会出现明显的增长和衰退现象，并且其变动和宏观经济周期变 动存在一定的关系。 \n
        1.增长型行业。 增长型行业的运行状态与经济周期关联不大。如生物技术、物联网、4D 技术等新生的 成长型行业。 \n
        2.周期型行业。 周期型行业的运动状态直接与经济周期相关。当经济处于上升时期，这些行业随其扩张，当经济衰退时，这些行业也会相应低迷。例如耐用品制造业、房地产等行业均属于典型的周期型行业。 \n
        3.防守型行业。防守型行业所提供的产品需求相对稳定，不受经济周期变化影响，无论在经济周期上升 阶段或下降阶段，由于稳定的需求和价格，行业的销售收入和利润会呈现基本稳定的态势。 例如食品业和公用事业属于防守型行业。 \n
        （三）行业生命周期分析  \n
        1.初创期。初创期是一个行业的起步阶段。因此，这时的创业公司可能不但没有利润反而会出现较 大亏损。  \n
        2.成长期。成长期是一个行业的黄金发展时期，行业利润迅猛增加。因此，这一时期的企业面临的 竞争压力非常巨大。 \n
        3.成熟期。成熟期是行业发展的巅峰时期，也是一个相对较长的时期。各企业之间实力相当，市场 份额不会出现较大改变，所以，成熟期也是行业发展的稳定阶段。 \n
        4.衰退期。衰退期是行业生命周期的最后阶段，是行业经济新陈代谢的表现。因此，一些企业开始 将资金从原有行业转移到其他有利可图的行业中。
        （四）影响行业兴衰的主要因素 \n
        1.技术进步。技术进步对行业的影响巨大，新技术的使用会创造新的行业，同时也会加速淘汰旧的行 业。但技术进步不局限于新行业，旧行业也可以通过技术创新进行产品的升级换代，从而获 得新的增长机会。 \n
        2.政府政策。 政府主要通过产业政策来对各行业进行管理和调控进而影响行业的发展。产业政策是国 家干预经济的一种形式，是为了实现一定的社会经济目标而对行业发展进行干预的各种政策 的总和。政府政策的核心是产业结构政策和产业组织政策。 \n
        3.行业组织创新。 行业组织是指同一行业内企业的组织形态和企业间的关系，包括市场结构、市场行为、 市场绩效三个方面内容。行业组织创新是使行业组织重新获得竞争优势的过程。一些组织创 新活跃的行业，随着新技术、新产品和新型组织关系的不断涌现，往往能获得超额利润。 \n
        4.社会变化。 社会观念、社会习惯、社会趋势的变化对企业经营活动、生产成本和利润收益等方面都 会产生一定的影响，足以使一些不再适应社会需要的行业衰退，而又会激发新兴行业的发展。 5.经济全球化。 经济全球化对各国经济发展产生重大影响，使每一个行业和企业都置身于全球性竞争 中，同时也使各行业可以获得全球性的市场和资源。经济全球化导致产业的全球性转移，会影响一个国家的行业结构发生重大变化。 \n
第三节区域经济发展分析 \n
一、区域发展条件分析 \n
        1.自然条件和自然资源是区域社会经济发展的物质前提和物质基础，自然资源的数量、质量、地域组合及开发利用条件等都将对区域发展产生重要的影响。对区域自然条件和自然资源的 分析，应明确其数量、质量和组合特征，优势、潜力和限制因素，可能的开发利用方向及技术经济前提，资源开发利用与生态保护的关系等问题。  \n
        2.区域劳动人口的数量会影响区域自然资源开发利用的规模（生产规模的大小），区域人口 的素质会影响区域经济的发展水平和区域产业的构成状况。应重点分析人口的数量、素质、 分布及其与资源数量和分布及生产布局的适应性或协调性，区域适度人口的规模等问题。 \n
        3.技术是构成区域生产力的重要组成部分，科学技术条件是发展的重要条件之一。自然条件 和自然资源提供了区域发展的可能性，而技术将这种可能性转变为现实性，技术革新会带来 社会经济的迅速发展。对科学技术条件的分析主要应评价区域科学技术发展水平及引进并消化吸收新技术的能力，技术引进的有利条件和阻力，适用技术的选择等。  \n
        4.对区域基础设施的分析应重点评价基础设施的种类、规模、水平、配套等对区域发展的影 响。 \n
        二、区域经济分析  \n
        区域经济分析主要是从经济发展的角度对区域经济发展的水平及所处的发展阶段、区域 产业结构和地域结构进行分析。它是在区域自然条件分析的基础上，进一步对区域经济发展 的现状作一个全面的考察、评估。对区域经济发展水平和发展阶段的分析主要是在建立经济发展水平量度标准的基础上， 通过横向比较，明确区域经济发展水平，确定其所处的发展阶段，为区域经济发展的战略决 策提供依据。对区域产业结构和空间结构的分析，主要是通过各种计量方法分析比较产业结 构和地域结构的合理性，为区域产业结构和空间结构的调整提供依据。 \n
        三、区域发展分析  \n
        区域发展分析是在区域自然条件和经济分析的基础上，通过发展预测、结构优化和方案 比较，确定区域发展的方向，并分析预测其实施效应。由于区域发展是一个综合性的问题， 它不仅涉及到经济发展，而且还涉及到社会发展和生态保护，因此，区域发展的分析也应包 括经济、社会和生态环境三个方面，并以三者综合效益作为分析判断的标准。 在区域发展中，经济发展仍然是核心，因此，对区域发展的分析，也应重点分析区域发 展的优势、主导产业及其发展方向，经济增长的形式以及产业结构和地域结构的优化等问题。
    </string>
    <string name="first2_label">第一部分第二章</string>
    <string name="first3_label">第一部分第三章</string>
    <string name="first4_label">第一部分第四章</string>
    <string name="second1_label">第二部分第一章</string>
    <string name="second2_label">第二部分第二章</string>
    <string name="second3_label">第二部分第三章</string>
    <string name="second6_label">第二部分第六章</string>
    <string name="second7_label">第二部分第七章</string>
    <string name="third1_label">第三部分第一章</string>
    <string name="third2_label">第三部分第二章</string>
    <string name="third3_label">第三部分第三章</string>
    <string name="third4_label">第三部分第四章</string>
    <string name="third5_label">第三部分第五章</string>
    <string name="fourth1_label">第四部分第一章</string>
    <string name="fourth2_label">第四部分第二章</string>
    <string name="fourth3_label">第四部分第三章</string>
    <string name="fourth4_label">第四部分第四章</string>
    <string name="fifth1_label">第五部分第一章</string>
    <string name="fifth3_label">第五部分第三章</string>
    <string name="fifth4_label">第五部分第四章</string>
    <string name="btn_new_label">实时资讯</string>
    <string name="history0_label"></string>
    <string name="history1_label">历年真题一</string>
    <string name="history2_label">历年真题二</string>
    <string name="history3_label">历年真题三</string>
    <string name="history4_label">历年真题四</string>
    <string name="history5_label">历年真题五</string>
    <string name="history6_label">历年真题六</string>
    <string name="history7_label">历年真题七</string>
    <string name="history8_label">历年真题八</string>
    <string name="history9_label">历年真题九</string>
    <string name="history10_label">历年真题十</string>
    <string name="history11_label">历年真题十一</string>
    <string name="history12_label">历年真题十二</string>
    <string name="history13_label">历年真题十三</string>
    <string name="forecast0_label"></string>
    <string name="forecast1_label">模拟试卷一</string>
    <string name="forecast2_label">模拟试卷二</string>
    <string name="forecast3_label">模拟试卷三</string>
    <string name="forecast4_label">模拟试卷四</string>
    <string name="forecast5_label">模拟试卷五</string>
    <string name="forecast6_label">模拟试卷六</string>
    <string name="forecast7_label">模拟试卷七</string>
    <string name="forecast8_label">模拟试卷八</string>
    <string name="forecast9_label">模拟试卷九</string>
    <string name="forecast10_label">模拟试卷十</string>
    <string name="forecast11_label">模拟试卷十一</string>
    <string name="forecast12_label">模拟试卷十二</string>
    <string name="forecast13_label">模拟试卷十三</string>
    <string name="forecast15_label"></string>
    <string name="btn_edit_label">保存</string>
    <string name="new_title">标题:</string>
    <string name="new_settitle">请输入便签标题~</string>
    <string name="new_content">内容：</string>
    <string name="new_inputcontent">请输便签入内容~</string>
    <string name="menu_newnote">新建</string>
    <string name="menu_exit">退出</string>
    <string name="menu_share">分享便签</string>

</resources>
