<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LawHistoryActivity">

    <Button
        android:id="@+id/history000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="540dp"
        android:text="@string/history0_label"
        android:textColor="#03A9F4"
        android:textSize="20sp" />
    <Button
        android:id="@+id/history00"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="520dp"
        android:text="@string/history0_label"
        android:textColor="#03A9F4"
        android:textSize="20sp" />

    <Button
        android:id="@+id/history0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="498dp"
        android:text="@string/history0_label"
        android:textColor="#03A9F4"
        android:textSize="20sp" />

    <Button
        android:id="@+id/history1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="462dp"
        android:text="@string/history1_label"
        android:textColor="#03A9F4"
        android:textSize="20sp" />

    <Button
        android:id="@+id/history2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="434dp"
        android:text="@string/history2_label"
        android:textColor="#03A9F4"
        android:textSize="20sp" />

    <Button
        android:id="@+id/history3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="401dp"
        android:text="@string/history3_label"
        android:textColor="#03A9F4"
        android:textSize="20sp" />

    <Button
        android:id="@+id/history4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="368dp"
        android:text="@string/history4_label"
        android:textColor="#03A9F4"
        android:textSize="20sp" />

    <Button
        android:id="@+id/history5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="335dp"
        android:text="@string/history5_label"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/history6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="302dp"
        android:text="@string/history6_label"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/history7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="269dp"
        android:text="@string/history7_label"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/history8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="236dp"
        android:text="@string/history8_label"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/history9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="203dp"
        android:text="@string/history9_label"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/history10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="170dp"
        android:text="@string/history10_label"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/history11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="137dp"
        android:text="@string/history11_label"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/history12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="104dp"
        android:text="@string/history12_label"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/history13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp"
        android:text="@string/history13_label"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/history14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:text="@string/history0_label"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/history15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="3dp"
        android:text="@string/history0_label"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>
</RelativeLayout>