<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LawSectionActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="matrix"
        app:srcCompat="@mipmap/main" />

    <Button
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="470dp"
        android:text="@string/btn_first_label"
        android:onClick="openFirst"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="390dp"
        android:text="@string/btn_second_label"
        android:onClick="openSecond"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="310dp"
        android:text="@string/btn_third_label"
        android:onClick="openThird"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/fourth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="230dp"
        android:text="@string/btn_fourth_label"
        android:onClick="openFourth"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/fifth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:text="@string/btn_fifth_label"
        android:onClick="openFifth"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>

</RelativeLayout>